--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,5 +1,6 @@
 {
     "branches": ["main"],
+    "repositoryUrl": "https://github.com/julian-one/dotcom.git",
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
