--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Echo Token Substring
+        run: 'echo "Token Substring: ${GITHUB_TOKEN:0:5}"'
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+
       - name: Semantic Release
         run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+          DEBUG: '*'
