--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dotcom",
   "version": "1.0.0",
   "description": "",
+  "repository": "https://github.com/julian-one/dotcom.git",
   "main": "src/index.js",
   "scripts": {
     "build": "tsc && cp -R public/ dist/public/",
