--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,20 +1,28 @@
 {
-    "branches": ["main"],
-    "repositoryUrl": "https://github.com/julian-one/dotcom.git",
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      ["@semantic-release/changelog", {
+  "branches": ["main"],
+  "repositoryUrl": "https://github.com/julian-one/dotcom.git",
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    [
+      "@semantic-release/changelog",
+      {
         "changelogFile": "CHANGELOG.md"
-      }],
-      ["@semantic-release/npm", {
+      }
+    ],
+    [
+      "@semantic-release/npm",
+      {
         "npmPublish": false
-      }],
-      ["@semantic-release/github", {}],
-      ["@semantic-release/git", {
+      }
+    ],
+    ["@semantic-release/github", {}],
+    [
+      "@semantic-release/git",
+      {
         "assets": ["CHANGELOG.md"],
         "message": "chore(release): set `package.json` to ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-      }]
+      }
     ]
-  }
-  
+  ]
+}
