--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "node dist/index.js",
     "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint 'src/**/*.{ts,tsx}'",
-    "format": "prettier --write 'src/**/*.{ts,tsx}'"
+    "lint": "eslint --fix '**/*.{js,ts}'",
+    "format": "prettier --write '**/*.{js,ts,json,md}'"
   },
   "author": "",
   "license": "ISC",
