--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,17 @@
 {
-    "compilerOptions": {
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "target": "ES2022",
-        "resolveJsonModule": true,
-        "strict": true,
-        "noUncheckedIndexedAccess": true,
-        "moduleResolution": "NodeNext",
-        "module": "NodeNext",
-        "outDir": "dist",
-        "sourceMap": true,
-        "lib": ["ES2023", "DOM", "DOM.Iterable"]
-    },
-    "include": [
-        "src/**/*", "public",
-    ],
-    "exclude": [
-        "node_modules"
-    ]
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "ES2022",
+    "resolveJsonModule": true,
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext",
+    "outDir": "dist",
+    "sourceMap": true,
+    "lib": ["ES2023", "DOM", "DOM.Iterable"]
+  },
+  "include": ["src/**/*", "public"],
+  "exclude": ["node_modules", "dist"]
 }
