--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
@@ -23,6 +24,7 @@
     "@semantic-release/github": "^9.2.1",
     "@types/express": "^4.17.19",
     "@types/node": "^20.8.6",
+    "@types/pg": "^8.10.7",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "eslint": "^8.52.0",
