--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-pg-simple": "^9.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -25,6 +26,7 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^9.2.1",
     "@types/bcrypt": "^5.0.1",
+    "@types/connect-pg-simple": "^7.0.2",
     "@types/express": "^4.17.19",
     "@types/express-session": "^1.17.9",
     "@types/node": "^20.8.6",
