--- a/dotcom-deployment.yaml
+++ b/dotcom-deployment.yaml
@@ -23,12 +23,45 @@ spec:
         image: julianone/dotcom:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 3000
+        - containerPort: 3000 # This should match the PORT value from the ConfigMap if not default
         env:
         - name: HOST
           value: "julian-one.com"
         - name: PORT
-          value: "3000"
+          valueFrom:
+            configMapKeyRef:
+              name: dotcom-config
+              key: PORT
+        - name: SECRET
+          valueFrom:
+            secretKeyRef:
+              name: dotcom-secret
+              key: SECRET
+        - name: DB_USER
+          valueFrom:
+            secretKeyRef:
+              name: dotcom-secret
+              key: DB_USER
+        - name: DB_HOST
+          valueFrom:
+            secretKeyRef:
+              name: dotcom-secret
+              key: DB_HOST
+        - name: DB_NAME
+          valueFrom:
+            secretKeyRef:
+              name: dotcom-secret
+              key: DB_NAME
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: dotcom-secret
+              key: DB_PASSWORD
+        - name: DB_PORT
+          valueFrom:
+            secretKeyRef:
+              name: dotcom-secret
+              key: DB_PORT
 ---
 apiVersion: v1
 kind: Service
@@ -43,7 +76,7 @@ spec:
   ports:
     - protocol: TCP
       port: 8080
-      targetPort: 3000
+      targetPort: 3000 # Make sure this matches the containerPort if not using the default port
   type: LoadBalancer
 ---
 apiVersion: networking.k8s.io/v1
