--- a/dotcom-deployment.yaml
+++ b/dotcom-deployment.yaml
@@ -23,7 +23,7 @@ spec:
         image: julianone/dotcom:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 3000 # This should match the PORT value from the ConfigMap if not default
+        - containerPort: 3000
         env:
         - name: HOST
           value: "julian-one.com"
@@ -76,7 +76,7 @@ spec:
   ports:
     - protocol: TCP
       port: 8080
-      targetPort: 3000 # Make sure this matches the containerPort if not using the default port
+      targetPort: 3000
   type: LoadBalancer
 ---
 apiVersion: networking.k8s.io/v1
