--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "build": "tsc && cp -R public/ dist/public/",
-    "start": "node dist/index.js",
-    "dev": "nodemon",
+    "start": "export ENV=prod && node dist/index.js",
+    "dev": "export ENV=dev && nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --fix '**/*.{js,ts}'",
     "format": "prettier --write '**/*.{js,ts,json,md}'"
