--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,56 +14,56 @@ spec:
         app: dotcom
     spec:
       containers:
-      - name: dotcom
-        image: julianone/dotcom:latest
-        imagePullPolicy: Always
-        ports:
-        - containerPort: 3000
-        env:
-        - name: HOST
-          value: "julian-one.com"
-        - name: PORT
-          valueFrom:
-            configMapKeyRef:
-              name: dotcom-config
-              key: PORT
-        - name: IS_COOKIE_SECURE
-          valueFrom:
-            configMapKeyRef:
-              name: dotcom-config
-              key: IS_COOKIE_SECURE
-        - name: ALLOWED_EMAILS
-          valueFrom:
-            configMapKeyRef:
-              name: dotcom-config
-              key: ALLOWED_EMAILS              
-        - name: SESSION_SECRET
-          valueFrom:
-            secretKeyRef:
-              name: dotcom-secret
-              key: SESSION_SECRET
-        - name: DB_USER
-          valueFrom:
-            secretKeyRef:
-              name: dotcom-secret
-              key: DB_USER
-        - name: DB_HOST
-          valueFrom:
-            secretKeyRef:
-              name: dotcom-secret
-              key: DB_HOST
-        - name: DB_NAME
-          valueFrom:
-            secretKeyRef:
-              name: dotcom-secret
-              key: DB_NAME
-        - name: DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: dotcom-secret
-              key: DB_PASSWORD
-        - name: DB_PORT
-          valueFrom:
-            secretKeyRef:
-              name: dotcom-secret
-              key: DB_PORT
+        - name: dotcom
+          image: julianone/dotcom:latest
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 3000
+          env:
+            - name: HOST
+              value: 'julian-one.com'
+            - name: PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: dotcom-config
+                  key: PORT
+            - name: IS_COOKIE_SECURE
+              valueFrom:
+                configMapKeyRef:
+                  name: dotcom-config
+                  key: IS_COOKIE_SECURE
+            - name: ALLOWED_EMAILS
+              valueFrom:
+                configMapKeyRef:
+                  name: dotcom-config
+                  key: ALLOWED_EMAILS
+            - name: SESSION_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: dotcom-secret
+                  key: SESSION_SECRET
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: dotcom-secret
+                  key: DB_USER
+            - name: DB_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: dotcom-secret
+                  key: DB_HOST
+            - name: DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: dotcom-secret
+                  key: DB_NAME
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: dotcom-secret
+                  key: DB_PASSWORD
+            - name: DB_PORT
+              valueFrom:
+                secretKeyRef:
+                  name: dotcom-secret
+                  key: DB_PORT
