--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "export ENV=dev && nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --fix '**/*.{js,ts}'",
-    "format": "prettier --write ."
+    "format": "prettier --write --ignore-unknown .",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
@@ -41,6 +42,8 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.0.2",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "semantic-release": "^22.0.6",
