--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc && cp -R public/ dist/public/",
     "start": "export ENV=prod && node dist/index.js",
     "dev": "export ENV=dev && nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint --fix '**/*.{js,ts}'",
     "format": "prettier --write --ignore-unknown .",
     "prepare": "husky install"
@@ -33,6 +33,7 @@
     "@types/connect-pg-simple": "^7.0.2",
     "@types/express": "^4.17.19",
     "@types/express-session": "^1.17.9",
+    "@types/jest": "^29.5.8",
     "@types/node": "^20.8.6",
     "@types/pg": "^8.10.7",
     "@types/validator": "^13.11.5",
@@ -43,10 +44,12 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
     "lint-staged": "^15.0.2",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "semantic-release": "^22.0.6",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
 }
